--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -1,16 +1,22 @@
-apiVersion : apps/v1beta1
+apiVersion : apps/v1
 kind: Deployment
 metadata:
   name: apicontagemk8s 
 spec:
-  replicas: 1
+  replicas: 4
+  selector:
+    matchLabels:
+      app: apicontagemk8s
   template:
     metadata:
       labels:
-        app: apicontagemk8s 
+        app: apicontagemk8s
     spec:
       containers:
         - name: apicontagemk8s
           image: groffegithubactions.azurecr.io/apicontagemk8s
+          env:
+            - name: MensagemVariavel
+              value: Utilizando o Azure Kubernetes Service (AKS)
           ports:
           - containerPort: 80
